# ImgProc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE
scripts/: install-opencv.ps1  install-opencv.sh
src/: CMakeLists.txt  image.cpp  image.h  kernel.cpp  kernel.h  main.cpp
